# ewald-summation

./: CMakeLists.txt  README.md
src/: precision.f90  testEwaldSummation.f90
src/atoms/: pointsets.f90
src/configuration/: parameters.f90
src/constants/: constants.f90
src/ewaldSummation/: ewaldSummation.f90
src/math/: linalg.f90  random.f90
src/util/: util.f90
